--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -60,8 +60,10 @@ button img {
 #cards{
     display: flex;
     justify-content: center;
+    flex-wrap:wrap ;
 }
 .card{
+    min-width: 334px;
     display: flex;
     flex-direction: column;
     padding: 0 32px;
@@ -89,9 +91,13 @@ button img {
     }
     #containerImage img{
         height: auto;
+        max-height: 250px;
         width: 100%;
         margin-bottom: 0;
         max-height: 100%;
+    }
+    .card{
+        border: none;
     }
 
 }
