--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -81,10 +81,9 @@ button img {
 }
 
 
-@media (max-width: 915px) {
+@media (max-width: 950px) {
     #containerImage{
-        height: auto;
-        max-height: 100vh;
+padding: 32px 0;
     }
     #containerImage h1{
         font-size: 3rem;
@@ -92,8 +91,7 @@ button img {
     }
     #containerImage img{
         height: auto;
-        max-height: 250px;
-        width: 100%;
+        max-height: 90vh;
         margin-bottom: 0;
         max-height: 100%;
     }
