--- a/assets/css/types.css
+++ b/assets/css/types.css
@@ -1,32 +1,32 @@
 .water{
-    background: linear-gradient(to right bottom, aqua, blue);
+    background: linear-gradient(to right bottom, rgb(0, 197, 197), blue);
 }
 .grass{
-    background: linear-gradient(to right bottom, green, white);
+    background: linear-gradient(to right bottom, rgb(0, 66, 0), rgb(123, 255, 163));
 
 }
 .fire{
-    background: linear-gradient(to right bottom, red, pink);
+    background: linear-gradient(to right bottom, red, rgb(255, 149, 100));
 }
 .rock{
-    background: linear-gradient(to right bottom, gray, white);
+    background: linear-gradient(to right bottom, gray, rgb(204, 204, 204));
 
 }
 .poison{
-    background: linear-gradient(to right bottom, yellowgreen, green);
+    background: linear-gradient(to right bottom, rgb(126, 0, 0), rgb(185, 0, 202));
 }
 .flying{
-    background: linear-gradient(to right bottom, aqua, black);
+    background: linear-gradient(to right bottom, rgb(0, 197, 197), rgb(0, 53, 53));
 }
 .fighting{
-    background: linear-gradient(to right bottom, red, rgb(82, 0, 0));
+    background: linear-gradient(to right bottom, rgb(255, 64, 64), rgb(82, 0, 0));
 }
 .dark{
-    background: linear-gradient(to right bottom, purple, black);
+    background: linear-gradient(to right bottom, purple, rgb(34, 0, 34));
 
 }
 .fairy{
-    background: linear-gradient(to right bottom, rgb(0, 131, 65), aqua);
+    background: linear-gradient(to right bottom, blue, rgb(66, 0, 128));
     
 }
 .ground{
@@ -41,11 +41,11 @@
 
 }
 .steel{
-    background: linear-gradient(to right bottom, rgb(31, 31, 31), rgb(192, 192, 192),rgb(126, 126, 126));
+    background: linear-gradient(to right bottom, rgb(31, 31, 31), rgb(192, 192, 192),rgb(78, 78, 78));
 
 }
 .electric{
-    background: linear-gradient(to right bottom, rgb(53, 54, 0) 30%, yellow);
+    background: linear-gradient(to right bottom, rgb(99, 100, 0) 30%, yellow);
 
 }
 .psychic{
