--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2,21 +2,27 @@
     font-family: 'roboto', sans-serif;
     margin: 0;
     padding: 0;
+    overflow: unset;
+}
+body{
+    background-color: #050529;
 }
 #groupBtnPagination{
-    position: absolute;
-    top: 220px;
-    right: 64px;
+    margin: 0 auto;
+    display: flex;
+    gap: 8px;
+    width: fit-content;
 }
 .btnPagination{
     padding: 8px;
     margin: 4px;
     cursor: pointer;
+    color: white;
 }
 h2{
     font-size: 5rem;
     text-align: center;
-    padding: 56px 0;
+    padding: 48px 0;
     margin: 32px 0;
     background: url('../images/pokebola.png');
     background-size: contain;
@@ -32,7 +38,7 @@ h2{
     list-style: none;
     flex-wrap: wrap;
     gap: 16px;
-    justify-content: space-around;
+    justify-content: center;
 
 }
 .card{
@@ -72,7 +78,7 @@ h2{
 }
 .type{
     padding: 4px 8px;
-    background-color: rgba(245, 245, 220, 0.356);
+    background-color: rgba(59, 59, 59, 0.356);
     border-radius: 50px;
     text-align: center;
     font-size: small;
@@ -100,6 +106,9 @@ h2{
     #groupBtnPagination{
         top: 152px;
         right: 32px;
+    }
+    .btnPagination{
+        font-size: 0.8rem;
     }
 }
 
