--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -3,6 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'roboto', sans-serif;
+    user-select: none;
+
 }
 body{
     background-color: #050529;
@@ -92,7 +94,6 @@ body{
     border-right: 1px solid gray;
 }
 .card h2{
-
     margin: 32px 0;
     font-size: 2rem;
 }
