--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -17,13 +17,12 @@ body{
     margin: 4px;
     cursor: pointer;
     color: white;
+    text-decoration: none;
 }
 h2{
     font-size: 5rem;
     text-align: center;
-    padding: 48px 0;
     margin: 32px 0;
-    background: url('../images/pokebola.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position-x: center;
