--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -121,7 +121,7 @@ body{
     }
     #containerImage img{
         height: auto;
-        max-height: 70vh;
+        max-height: 80%;
         margin-bottom: 0;
         max-width: 90%;
     }
