--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -119,7 +119,7 @@ body{
     #containerImage h1{
         font-size: 3rem;
     }
-    #containerImage img{
+    #imgPokemon{
         max-height: 80%;
         margin-bottom: 0;
         max-width: 90%;
