--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -33,6 +33,9 @@ body{
     gap: 64px;
     justify-content: center;
     align-items: center;
+    background-size: 400px;
+        background-position: right center;
+    
 }
 .positionArrows{
     position: absolute;
@@ -78,6 +81,7 @@ body{
     font-size: 5rem;
     color: white;
     text-shadow: 1px 1px 3px black;
+
     
 }
 #cards{
@@ -92,6 +96,7 @@ body{
     padding: 0 32px;
     border-left: 1px solid gray;
     border-right: 1px solid gray;
+    background-size: 20%;
 }
 .card h2{
     margin: 32px 0;
@@ -115,6 +120,7 @@ body{
         flex-wrap: nowrap;
         padding: 32px;
         height: 65vh;
+        
     }
     #containerImage h1{
         font-size: 3rem;
